Adicionando classe de tweet e método para recuperar tweets de um usuário (ainda com mock), além de testes.

--- a/classesTwitter/CMakeLists.txt
+++ b/classesTwitter/CMakeLists.txt
@@ -3,4 +3,4 @@ project(classesTwitter)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(classesTwitter Feed.cpp Feed.h Usuario.cpp Usuario.h Mencao.cpp Mencao.h)
+add_executable(classesTwitter Feed.cpp Feed.h Usuario.cpp Usuario.h Mencao.cpp Mencao.h Main.cpp Tweet.cpp Tweet.h)
